# connect-py-client

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
docs/: index.md
src/connect_client/: __init__.py  decorators.py  main.py  validators.py
src/connect_client/exceptions/: __init__.py  error_responses.py
src/connect_client/mixins/: __init__.py
src/connect_client/models/: base.py  device.py
src/connect_client/modules/auth/: __init__.py  constants.py
src/connect_client/modules/devices/: __init__.py  constants.py
src/connect_client/modules/orgs/: __init__.py  constants.py
src/connect_client/modules/sims/: __init__.py  constants.py
src/trinity_connect_client/: __init__.py  decorators.py  validators.py
src/trinity_connect_client/mixins/: __init__.py
src/trinity_connect_client/models/: __init__.py  org.py
src/trinity_connect_client/modules/devices/: __init__.py
src/trinity_connect_client/modules/orgs/: __init__.py
tests/: conftest.py  test_models.py
tests/exceptions/: test_error_responses.py
tests/modules/devices/: test_devices_api.py
tests/modules/orgs/: test_orgs_api.py
