[project]
name = "connect-client"
version = "0.1.3"
description = "Official Python library for Connect API interactions"
readme = "README.md"
authors = [
    { name = "Andries Niemandt", email = "andries.niemandt@trintel.co.za" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/trinity-telecomms/connect-client"
Issues = "https://github.com/trinity-telecomms/connect-client/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
lint = [
    "ruff>=0.12.3",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]
