[project]
name = "trinity-connect-client"
version = "0.2.0"
description = "Official Python library for Trinity IoT Connect API interactions"
readme = "README.md"
authors = [
    { name = "Jan Badenhorst", email = "jan.badenhorst@trintel.co.za" },
    { name = "Andries Niemandt", email = "andries.niemandt@trintel.co.za" }
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32.4",
]

[project.urls]
Homepage = "https://github.com/trinity-telecomms/connect-py-client"
Issues = "https://github.com/trinity-telecomms/connect-py-client/issues"

[build-system]
requires = ["uv_build >= 0.7.19, <0.9.0"]
build-backend = "uv_build"

[dependency-groups]
lint = [
    "ruff>=0.12.3",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.12.0",
    "responses>=0.24.0",
]

[tool.coverage.run]
data_file = ".coverage/.coverage"

[tool.coverage.html]
directory = ".coverage"
